swagger for user endpoints
